# InverterGen5

./: TODO.txt
Boards/BOMs/: Combined.csv
Boards/ControlBoard/: #auto_saved_files#  5VADCFilter.kicad_sch  ADC1.kicad_sch  ADC2.kicad_sch  CAN.kicad_sch  Control.kicad_sch  ControlBoard.kicad_pcb  ControlBoard.kicad_prl  ControlBoard.kicad_pro  ControlBoard.kicad_sch  ControlBoard.step  OutputRelays.kicad_sch  Power.kicad_sch  VoltageSenseInputStage.kicad_sch  fp-info-cache
Boards/ControlBoard/Fab/: ControlBoard-B_Cu.gbr  ControlBoard-Edge_Cuts.gbr  ControlBoard-F_Mask.gbr  ControlBoard-In3_Cu.gbr  ControlBoard-bottom.pos
Boards/ControlBoard/bom/: ControlBoard.csv
Boards/DCBusCapacitorBoard/: DCBusCapacitorBoard.kicad_pcb  DCBusCapacitorBoard.kicad_prl  DCBusCapacitorBoard.kicad_pro  DCBusCapacitorBoard.kicad_sch  DCBusCapacitorBoard.step
Boards/DCBusCapacitorBoard/Fab/: ControlBoard-B_Paste.gbr  ControlBoard-In2_Cu.gbr  ControlBoard-NPTH.drl
Boards/DCBusCapacitorBoard/bom/: ibom.html
Boards/DCBusFilter/: DCBusFilter.kicad_pcb  DCBusFilter.kicad_prl  DCBusFilter.kicad_pro  DCBusFilter.kicad_sch  DCBusFilter.step  _autosave-ControlBoard.kicad_sch  _autosave-DCBusFilter.kicad_prl  fp-info-cache
Boards/DCBusFilter/Fab/: ControlBoard-B_Mask.gbr  ControlBoard-F_Cu.gbr  ControlBoard-top.pos
Boards/GateDriver/: GateDriver.kicad_pcb  GateDriver.kicad_prl  GateDriver.kicad_pro  GateDriver.kicad_sch  SingleChannelDriver.kicad_sch  _autosave-GateDriver.kicad_prl  fp-info-cache
Boards/MainBoard/: CAN.kicad_sch  MainBoard.kicad_pcb  MainBoard.kicad_prl  MainBoard.kicad_pro  MainBoard.kicad_sch  OutputRelays.kicad_sch  _autosave-MainBoard.kicad_prl  fp-info-cache
Boards/MainBoard/Fab/: ControlBoard-B_Silkscreen.gbr  ControlBoard-F_Paste.gbr  ControlBoard-F_Silkscreen.gbr  ControlBoard-In1_Cu.gbr  ControlBoard-In4_Cu.gbr  ControlBoard-PTH.drl  ControlBoard-job.gbrjob
Firmware/: CMakeLists.txt  TODO.md
Firmware/Junk/: CommandFactory.h  Hardware.h  Main_copy_2_latest_12am_1_31_2026 copy.cpp
Firmware/Junk/command_old/: cli.h
Firmware/Junk/command_old/commands/: cmd_motor.c
Firmware/Source/: CommutationManager.cpp  CommutationManager.h  Hardware.h  Main copy.cpp  Main.cpp  PWMDriver.cpp  PWMDriver.h  RtBridge.cpp  RtBridge.h
Firmware/Source/Command/: CommandContext.h  CommandInitializer.cpp  CommandInitializer.h  CommandInterface.h  CommandManager.cpp  CommandManager.h  CommandTypes.h  RtCtxHelpers.h  SerialProcessor.h
Firmware/Source/Command/Commands/: AsyncCommand.cpp  AutoCommand.cpp  CarrierCommand.cpp  EmergencyStopCommand.cpp  EnableCommand.cpp  FlashCommand.cpp  FreqCommand.cpp  HelpCommand.cpp  ImmediateCommand.cpp  RampCommand.cpp  SoftStopCommand.cpp
Firmware/Source/Configuration/: ConfigManager.cpp  ConfigManager.h
Firmware/Source/FileSystem/: FileSystem.cpp  FileSystem.h
Firmware/Source/Sensors/: MAX2253x.cpp  MAX2253x.h  MeasurementSystem.cpp  MeasurementSystem.h
Firmware/Source/Switching/: CommutationManager.cpp  CommutationManager.h  PWMDriver.cpp  PWMDriver.h
Firmware/Source/command_old/: cli.c
Firmware/Source/command_old/commands/: cmd_help.c
Firmware/Tools/: Build.sh  Build_Flash.sh  Clean.sh  Flash.sh
Mechanical/: 91290A165_Black-Oxide Alloy Steel Socket Head Screw.STEP  91292A112_18-8 Stainless Steel Socket Head Screw.STEP  91292A134_18-8 Stainless Steel Socket Head Screw.STEP
Mechanical/971120321/3D/: 971120321.stp
Mechanical/971200321/3D/: 971200321.stp
Mechanical/971200474/3D/: 971200474.stp
Mechanical/971200481/3D/: 971200481.stp
Mechanical/971200611/3D/: 971200611.stp
Mechanical/971260321/3D/: 971260321.stp
Mechanical/971350321/3D/: 971350321.stp
Mechanical/971400471/3D/: 971400471.stp
Mechanical/B57703M0103A019/3D/: B57703M0103A019.stp
PartsLib/: InverterCom.bak  InverterCom.kicad_sym
(+5 files in other folders)
